--- a/index.html
+++ b/index.html
@@ -2,45 +2,56 @@
 <html lang="en">
 
 <head>
-    <title>My personal Website</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <section id="app">
-        <h1>
-            Apps
-        </h1>
-        <div class="line"></div>
-        <span>
-            <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/BhCXnNuIBeUHsrEbuP1ZXpYP0-eDmaXKuzXDqrzZv2E/embed"></iframe>
-        </span>
-        <span>
-            <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/lXO47kBeOxNuRnXy0h9Fod6ppnptpZt-gwylg30M2Ug/embed"></iframe>
-        </span>
-    </section>
-    <section id="game">
-        <h1>
-            Games
-        </h1>
-        <div class="line"></div>
-        <span>
-            <a href="https://studio.code.org/projects/spritelab/rJZbYHJWA1BDhCyA6aL0qXoxKp1tTaAMn-RJkl_TL3c" target="_blank"><img height="700" width="500" src="car%20game.png"></a>
-        </span>
-        <span>
-            <a href="https://studio.code.org/projects/spritelab/BSumJpZ-3eHWLjYR1In2ATybyfz7ATv3jD5xGr9FwrA" target="_blank"><img height="700" width="500" src="volley%20game.png"></a>
-        </span>
-    </section>
-    <section id="chattingbot">
-        <h1>
-            Chattingbot
-        </h1>
-        <div class="line"></div>
-        <iframe
-    allow="microphone;"
-    width="500"
-    height="700"
-    src="https://console.dialogflow.com/api-client/demo/embedded/039fdce0-8808-42b3-a0db-bd041f8b5482">
-</iframe>
-    </section>
-</body></html>
+
+    <div class="container">
+
+        <section id="app">
+            <h1>Apps</h1>
+            <div class="line"></div>
+            <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/AmAIOlod-80aGvVFcBdbfjebPGUlVaYjI8ECZcJtZks/embed"></iframe>
+            <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/U9AQsuLnTixFr5caYUBM9qmkuaPCvmuWblFMcUPrC14/embed"></iframe>
+        </section>
+        <h2>
+            Click on the games to explore
+        </h2>
+        <h5>
+            These games are built in sprite lab , Click on the game to play
+        </h5>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="item active">
+                    <center>
+                        <a href="https://studio.code.org/projects/spritelab/BSumJpZ-3eHWLjYR1In2ATybyfz7ATv3jD5xGr9FwrA" target="_blank"><img src="Winne_Pooh.png" class="img-responsive">
+                        </a>
+                        <div class="carousel-content">
+                            <p>Winnie The pooh</p>
+                        </div>
+                    </center>
+                </div>
+                <div class="item">
+                    <center>
+                        <a href="https://studio.code.org/projects/spritelab/rJZbYHJWA1BDhCyA6aL0qXoxKp1tTaAMn-RJkl_TL3c" target="_blank"><img src="Car_game.png" class="img-responsive">
+                        </a>
+                        <div class="carousel-content">
+                            <p>Car Game</p>
+                        </div>
+                    </center>
+                </div>
+            </div>
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+        </div>
+    </div>
+
+</body>
+
+</html>
